Added company name and trainee years

--- a/index.html
+++ b/index.html
@@ -61,7 +61,14 @@
     <ul class="no-bullets">
       <li>
         <div class="experience-element">
-          <p class="job">Apigee Support Engineer (2020 - 2022)</p>
+          <p class="job">Trainee (2019 - 2020) [Concentrix Catalyst]</p>
+          <p class="description">Learn multiple coding languages and technologies.</p>
+        </div>
+      </li>
+      <br />
+      <li>
+        <div class="experience-element">
+          <p class="job">Apigee Support Engineer (2020 - 2022) [Concentrix Catalyst]</p>
           <p class="description">Provide support to apigee developers with coding and troubleshooting.</p>
           <p class="subheader">Responsabilities:</p>
           <ul>
@@ -74,9 +81,10 @@
           </ul>
         </div>
       </li>
+      <br />
       <li>
         <div class="experience-element">
-          <p class="job">Frontend Engineer (2022 - 2023)</p>
+          <p class="job">Frontend Engineer (2022 - 2023) [Concentrix Catalyst]</p>
           <p class="description">Renew the main portal of the company using ReactJS.</p>
           <p class="subheader">Responsabilities:</p>
           <ul>
@@ -95,7 +103,7 @@
       </li>
     </ul>
     <h1>Skills</h1>
-    <p class="skills"><b>ReactJS | Javascript | HTML | CSS | SCSS | Typescript | Apigee | NodeJS | Express | MongoDB |
+    <p class="skills"><b>ReactJS | Javascript | HTML | CSS | SCSS | Typescript | Apigee | NodeJS | Express | Redux | MongoDB |
         Labview | Arduino | Git | C | Spring | Python | Java | Machine Learning | Unity | Splunk | Jira | MySQL |
         Jenkins | Grafana</b></p>
     <h1>Aditional information</h1>
