Added react native and algorithms

--- a/index.html
+++ b/index.html
@@ -35,24 +35,24 @@
   <hr />
   <div class="main-section">
     <h1>About me</h1>
-    <p>I am passionate about automating processes and making things work as efficient as possible.</p>
+    <p>I love using my creativity to develop solutions for complex problems and to improve processes.</p>
     <h1>Education</h1>
     <ul class="no-bullets">
       <li>
         <div class="education-element">
-          <p class="career">Mechatronics engineering</p>
+          <p class="career">Mechatronics engineering (2015 - 2020)</p>
           <p class="school">Tecnológico de Monterrey campus Querétaro</p>
         </div>
       </li>
       <li>
         <div class="education-element">
-          <p class="career">Research internship</p>
+          <p class="career">Research internship (Summer 2018)</p>
           <p class="school">University of Ontario Institute of Technology</p>
         </div>
       </li>
       <li>
         <div class="education-element">
-          <p class="career">Master of Business Administration</p>
+          <p class="career">Master of Business Administration (2020 - 2022)</p>
           <p class="school">Universidad Latinoamericana</p>
         </div>
       </li>
@@ -103,9 +103,9 @@
       </li>
     </ul>
     <h1>Skills</h1>
-    <p class="skills"><b>ReactJS | Javascript | HTML | CSS | SCSS | Typescript | Apigee | NodeJS | Express | Redux | MongoDB |
+    <p class="skills"><b>ReactJS | React Native | Javascript | HTML | CSS | SCSS | Typescript | Apigee | NodeJS | Express | Redux | MongoDB |
         Labview | Arduino | Git | C | Spring | Python | Java | Machine Learning | Unity | Splunk | Jira | MySQL |
-        Jenkins | Grafana</b></p>
+        Jenkins | Grafana | Algorithms</b></p>
     <h1>Aditional information</h1>
     <ul class="aditional-info-list">
       <li>In both of my past projects I escalated quickly to manage projects by myself and gained the trust of my
