--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <hr />
   <div class="main-section">
     <h1>About me</h1>
-    <p>I love using my creativity to develop solutions for complex problems and to improve processes.</p>
+    <p>I am a proactive person that loves automating processes and making them as efficient as possible.</p>
     <h1>Education</h1>
     <ul class="no-bullets">
       <li>
@@ -74,7 +74,7 @@
           <ul>
             <li>Assist with production and non production issues, through emails, chats or calls.</li>
             <li>Debug code from other developers.</li>
-            <li>Automate using apigee, javascript and React js.</li>
+            <li>Automate processes using Apigee, Javascript and React js.</li>
             <li>Assist with queries on apigee capabilities or help on how to code.</li>
             <li>Monitor dashboards to prevent production issues.</li>
             <li>Develop documentation for users.</li>
@@ -101,17 +101,33 @@
           </ul>
         </div>
       </li>
+      <br />
+      <li>
+        <div class="experience-element">
+          <p class="job">Apigee Operations Engineer (2023 - 2024) [Concentrix Catalyst]</p>
+          <p class="description">Take care of the Apigee Operations</p>
+          <p class="subheader">Responsabilities:</p>
+          <ul>
+            <li>Take care of the Apigee coding and deployments.</li>
+            <li>Troubleshoot Apigee issues in both non prod and prod environments.</li>
+            <li>Automate processes using Apigee, Javascript and Node js.</li>
+            <li>Implement dashboards and alerts with Kibana to give final users visibility of their proxies.</li>
+            <li>Help managers and non technical users to translate their needs into solutions with Apigee.</li>
+            <li>Develop internal documentations.</li>
+          </ul>
+        </div>
+      </li>
     </ul>
     <h1>Skills</h1>
-    <p class="skills"><b>ReactJS | React Native | Javascript | HTML | CSS | SCSS | Typescript | Apigee | NodeJS | Express | Redux | MongoDB |
-        Labview | Arduino | Git | C | Spring | Python | Java | Machine Learning | Unity | Splunk | Jira | MySQL |
-        Jenkins | Grafana | Algorithms</b></p>
+    <p class="skills"><b>ReactJS | NodeJS | React Native | Javascript | HTML | CSS | SCSS | Typescript | Apigee |
+        Express | Redux | MongoDB | Elasticsearch | Kibana | Labview | Arduino | Git | C | Spring | Python | Java |
+        Machine Learning | Unity | Splunk | Jira | MySQL | Jenkins | Grafana | Algorithms</b></p>
     <h1>Aditional information</h1>
     <ul class="aditional-info-list">
-      <li>In both of my past projects I escalated quickly to manage projects by myself and gained the trust of my
+      <li>In all of my past projects I escalated quickly to manage projects by myself and gained the trust of my
         superiors and coworkers due to my attitude, leadership, skills and good results.</li>
       <li>Advanced english level.</li>
-      <li>For more information about my projects, certificates and myself, please visit my Portfolio (not updated yet)
+      <li>For more information about my projects, certificates and myself, please visit my Portfolio (not updated)
         developed with React.js at <a href="https://juanro-pf.github.io/portfolio"
           target="_blank">https://juanro-pf.github.io/portfolio</a></li>
     </ul>
