Added skills and made some modifications

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="resume.css">
+  <link rel="stylesheet" type="text/css" href="resume.css">
   <title>Resume</title>
 </head>
 
@@ -15,7 +15,7 @@
     <div class="about-me">
       <p>Juan Rodrigo Ponce Flores</p>
       <hr />
-      <p class="ocupation">Software engineer</p>
+      <p class="ocupation">Software engineer / Mechatronics engineer</p>
     </div>
     <div class="contact">
       <div>
@@ -27,7 +27,7 @@
       <div>
         <a href="tel:+524612791146">+52 461 279 1146</a>
         <a href="mailto:juanro.pf@gmail.com">juanro.pf@gmail.com</a>
-        <a href="https://www.linkedin.com/in/juan-rodrigo-ponce/" target="_blank">Rodrigo Ponce</a>
+        <a href="https://www.linkedin.com/in/juan-rodrigo-ponce/" target="_blank">Juan Rodrigo Ponce</a>
         <a href="https://goo.gl/maps/kaUL3nyGEckutvq2A" target="_blank">Querétaro, México</a>
       </div>
     </div>
@@ -110,26 +110,29 @@
           <ul>
             <li>Take care of the Apigee coding and deployments.</li>
             <li>Troubleshoot Apigee issues in both non prod and prod environments.</li>
-            <li>Automate processes using Apigee, Javascript and Node js.</li>
+            <li>Automate processes using Apigee, Power Automate, Javascript and Node js.</li>
             <li>Implement dashboards and alerts with Kibana to give final users visibility of their proxies.</li>
             <li>Help managers and non technical users to translate their needs into solutions with Apigee.</li>
-            <li>Develop internal documentations.</li>
+            <li>Develop documentations.</li>
           </ul>
         </div>
       </li>
     </ul>
     <h1>Skills</h1>
-    <p class="skills"><b>ReactJS | NodeJS | React Native | Javascript | HTML | CSS | SCSS | Typescript | Apigee |
-        Express | Redux | MongoDB | Elasticsearch | Kibana | Labview | Arduino | Git | C | Spring | Python | Java |
+    <p class="skills"><b>ReactJS | NodeJS | React Native | Javascript | HTML | CSS | SCSS | Typescript | Apigee | Power
+        Automate |
+        Express | Redux | MongoDB | Elasticsearch | Kibana | SolidWorks | 3D Printing | Labview | Arduino | Git | C++ |
+        Spring | Python |
         Machine Learning | Unity | Splunk | Jira | MySQL | Jenkins | Grafana | Algorithms</b></p>
     <h1>Aditional information</h1>
     <ul class="aditional-info-list">
-      <li>In all of my past projects I escalated quickly to manage projects by myself and gained the trust of my
+      <li>In all of my past projects I quickly escalated to lead people and manage projects by myself. I gained the
+        trust of my
         superiors and coworkers due to my attitude, leadership, skills and good results.</li>
       <li>Advanced english level.</li>
-      <li>For more information about my projects, certificates and myself, please visit my Portfolio (not updated)
+      <!-- <li>For more information about my projects, certificates and myself, please visit my Portfolio (not updated)
         developed with React.js at <a href="https://juanro-pf.github.io/portfolio"
-          target="_blank">https://juanro-pf.github.io/portfolio</a></li>
+          target="_blank">https://juanro-pf.github.io/portfolio</a></li> -->
     </ul>
   </div>
 </body>
